[gd_scene format=3 uid="uid://ckj7cbmvwebi5"]

[ext_resource type="Script" uid="uid://tjub0a6f80l2" path="res://scenes/debug/NegotiationPipelineLab.gd" id="1_main"]
[ext_resource type="Script" uid="uid://pln854e0aaos" path="res://scenes/debug/VectorFieldPlot.gd" id="2_plot"]

[node name="NegotiationPipelineLab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.08, 0.12, 1)

[node name="MainHBox" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 480

[node name="DebugPanel" type="PanelContainer" parent="MainHBox"]
custom_minimum_size = Vector2(460, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="DebugPanelBG" type="ColorRect" parent="MainHBox/DebugPanel"]
layout_mode = 2
color = Color(0.08, 0.06, 0.1, 0.9)

[node name="DebugVBox" type="VBoxContainer" parent="MainHBox/DebugPanel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="DebugTitleLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 20
text = "üîß Ë∞ÉËØïÊéßÂà∂Èù¢Êùø"
horizontal_alignment = 1

[node name="DebugHSplit" type="HSplitContainer" parent="MainHBox/DebugPanel/DebugVBox"]
layout_mode = 2
size_flags_vertical = 3
split_offset = 200

[node name="LeftControlPanel" type="ScrollContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 0

[node name="LeftControlVBox" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 14

[node name="TitleLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 1, 1)
theme_override_font_sizes/font_size = 16
text = "üß† AI Core Config"
horizontal_alignment = 1

[node name="TimeScaleGroup" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TimeScaleLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/TimeScaleGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 12
text = "‚è±Ô∏è Êó∂Èó¥ÊµÅÈÄü"

[node name="TimeScaleSlider" type="HSlider" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/TimeScaleGroup"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
max_value = 0.1
step = 0.01
value = 0.04

[node name="TimeScaleValueLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/TimeScaleGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "Êó∂Èó¥ÊµÅÈÄü: 0.04x"
horizontal_alignment = 1

[node name="GreedGroup" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="GreedLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/GreedGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.6, 0.4, 1)
theme_override_font_sizes/font_size = 12
text = "üí∞ Ë¥™Â©™Âõ†Â≠ê"

[node name="GreedSlider" type="HSlider" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/GreedGroup"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
min_value = 0.2
max_value = 3.0
step = 0.1
value = 1.0

[node name="GreedValueLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/GreedGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "Ë¥™Â©™Âõ†Â≠ê: 1.00"
horizontal_alignment = 1

[node name="TargetPGroup" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TargetPLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/TargetPGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "üéØ ÁõÆÊ†áÂà©Ê∂¶ (P)"

[node name="TargetPSlider" type="HSlider" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/TargetPGroup"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
min_value = -100.0
max_value = 200.0
step = 5.0
value = 100.0

[node name="TargetPValueLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/TargetPGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "ÁõÆÊ†áÂà©Ê∂¶: 100"
horizontal_alignment = 1

[node name="TargetRGroup" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TargetRLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/TargetRGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.8, 1, 1)
theme_override_font_sizes/font_size = 12
text = "üéØ ÁõÆÊ†áÂÖ≥Á≥ª (R)"

[node name="TargetRSlider" type="HSlider" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/TargetRGroup"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
min_value = -100.0
max_value = 200.0
step = 5.0
value = 80.0

[node name="TargetRValueLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/TargetRGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "ÁõÆÊ†áÂÖ≥Á≥ª: 80"
horizontal_alignment = 1

[node name="ThresholdGroup" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ThresholdLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/ThresholdGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 12
text = "üîò Êàê‰∫§ÈòàÂÄº"

[node name="ThresholdSlider" type="HSlider" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/ThresholdGroup"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
min_value = 10.0
step = 5.0
value = 40.0

[node name="ThresholdValueLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/ThresholdGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "Êàê‰∫§ÈòàÂÄº: 40"
horizontal_alignment = 1

[node name="ActiveStrengthGroup" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ActiveStrengthLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/ActiveStrengthGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.7, 1)
theme_override_font_sizes/font_size = 12
text = "ü§ñ AI ‰∏ªÂä®ÊÄß"

[node name="ActiveStrengthSlider" type="HSlider" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/ActiveStrengthGroup"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
step = 5.0
value = 30.0

[node name="ActiveStrengthValueLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/ActiveStrengthGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "‰∏ªÂä®ÊÄß: 30"
horizontal_alignment = 1

[node name="StatusPanel" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatusTitleLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/StatusPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.7, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "üìä Áä∂ÊÄÅÁõëÊµã"
horizontal_alignment = 1

[node name="PressureGroup" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/StatusPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="PressureLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/StatusPanel/PressureGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.5, 0.3, 1)
theme_override_font_sizes/font_size = 11
text = "üå°Ô∏è ÂéãÂäõ"

[node name="PressureBar" type="ProgressBar" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/StatusPanel/PressureGroup"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
show_percentage = false

[node name="PressureValueLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/StatusPanel/PressureGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 10
text = "0 / 100"
horizontal_alignment = 1

[node name="SatisfactionGroup" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/StatusPanel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="SatisfactionLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/StatusPanel/SatisfactionGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 11
text = "üòä Êª°ÊÑèÂ∫¶"

[node name="SatisfactionBar" type="ProgressBar" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/StatusPanel/SatisfactionGroup"]
custom_minimum_size = Vector2(0, 18)
layout_mode = 2
value = 50.0
show_percentage = false

[node name="SatisfactionValueLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/LeftControlPanel/LeftControlVBox/StatusPanel/SatisfactionGroup"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 10
text = "50%"
horizontal_alignment = 1

[node name="RightDebugPanel" type="VBoxContainer" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="VectorPlotTitle" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/RightDebugPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "üì° ÂêëÈáèÂú∫ (PR Space)"
horizontal_alignment = 1

[node name="VectorFieldPlot" type="Control" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/RightDebugPanel"]
custom_minimum_size = Vector2(260, 240)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("2_plot")

[node name="StatusLabel" type="RichTextLabel" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/RightDebugPanel"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
bbcode_enabled = true
text = "[center][b]‚ïê‚ïê‚ïê Áâ©ÁêÜÈ©±Âä®Âç°ÁâåÁ≥ªÁªü ‚ïê‚ïê‚ïê[/b][/center]

ÂèåÂáªÂç°ÁâåÊøÄÊ¥ªÊïàÊûú..."
scroll_active = false

[node name="LogLabel" type="Label" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/RightDebugPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.6, 1)
theme_override_font_sizes/font_size = 12
text = "üìú ÂÜ≥Á≠ñÊó•Âøó"

[node name="HistoryLog" type="RichTextLabel" parent="MainHBox/DebugPanel/DebugVBox/DebugHSplit/RightDebugPanel"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "[color=gray][i]Á≠âÂæÖÈ¶ñÊ¨°‰∫§‰∫í...[/i][/color]"

[node name="GamePanel" type="PanelContainer" parent="MainHBox"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="GamePanelBG" type="ColorRect" parent="MainHBox/GamePanel"]
layout_mode = 2
color = Color(0.12, 0.1, 0.15, 0.95)

[node name="GameVBox" type="VBoxContainer" parent="MainHBox/GamePanel"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="GameTitleLabel" type="Label" parent="MainHBox/GamePanel/GameVBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.85, 0.4, 1)
theme_override_font_sizes/font_size = 22
text = "üéÆ Ë∞àÂà§Ê°å"
horizontal_alignment = 1

[node name="ProposalSection" type="VBoxContainer" parent="MainHBox/GamePanel/GameVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/separation = 10

[node name="ProposalTitleLabel" type="Label" parent="MainHBox/GamePanel/GameVBox/ProposalSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.75, 0.5, 1)
theme_override_font_sizes/font_size = 16
text = "üìã ÂΩìÂâçÊèêÊ°à (ÊãñÊîæÊèêÊ°àÁâåÂà∞Ê≠§Â§Ñ)"
horizontal_alignment = 1

[node name="ProposalDropZone" type="PanelContainer" parent="MainHBox/GamePanel/GameVBox/ProposalSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProposalDropBG" type="ColorRect" parent="MainHBox/GamePanel/GameVBox/ProposalSection/ProposalDropZone"]
layout_mode = 2
color = Color(0.15, 0.12, 0.2, 0.8)

[node name="ProposalDropBorder" type="Panel" parent="MainHBox/GamePanel/GameVBox/ProposalSection/ProposalDropZone"]
layout_mode = 2

[node name="ProposalScroll" type="ScrollContainer" parent="MainHBox/GamePanel/GameVBox/ProposalSection/ProposalDropZone"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 2

[node name="ProposalCardContainer" type="HBoxContainer" parent="MainHBox/GamePanel/GameVBox/ProposalSection/ProposalDropZone/ProposalScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 12
alignment = 1

[node name="ProposalHintLabel" type="Label" parent="MainHBox/GamePanel/GameVBox/ProposalSection/ProposalDropZone"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -20.0
offset_right = 120.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.5, 0.5, 0.5, 0.6)
theme_override_font_sizes/font_size = 14
text = "‰ªé‰∏ãÊñπÊãñÂÖ•ÊèêÊ°àÁâå..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubmitSection" type="HBoxContainer" parent="MainHBox/GamePanel/GameVBox"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="SubmitButton" type="Button" parent="MainHBox/GamePanel/GameVBox/SubmitSection"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "ü§ù Êèê‰∫§ÊèêÊ°à"

[node name="ResetButton" type="Button" parent="MainHBox/GamePanel/GameVBox/SubmitSection"]
custom_minimum_size = Vector2(120, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "üîÑ ÈáçÁΩÆ"

[node name="AISynthesisButton" type="Button" parent="MainHBox/GamePanel/GameVBox/SubmitSection"]
custom_minimum_size = Vector2(150, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.4, 0.9, 1, 1)
text = "ü§ñ AI ÂêàÊàêÂàÜÊûê"

[node name="ProposalCardSection" type="VBoxContainer" parent="MainHBox/GamePanel/GameVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ProposalCardLabel" type="Label" parent="MainHBox/GamePanel/GameVBox/ProposalCardSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.9, 0.7, 1)
theme_override_font_sizes/font_size = 14
text = "üè∑Ô∏è ÂèØÁî®ÊèêÊ°àÁâå (ÂèåÂáªÊàñÊãñÊîæ)"

[node name="ProposalCardPanel" type="PanelContainer" parent="MainHBox/GamePanel/GameVBox/ProposalCardSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="ProposalCardBG" type="ColorRect" parent="MainHBox/GamePanel/GameVBox/ProposalCardSection/ProposalCardPanel"]
layout_mode = 2
color = Color(0.1, 0.12, 0.08, 0.8)

[node name="ProposalCardScroll" type="ScrollContainer" parent="MainHBox/GamePanel/GameVBox/ProposalCardSection/ProposalCardPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 2

[node name="ProposalCardContainer" type="HBoxContainer" parent="MainHBox/GamePanel/GameVBox/ProposalCardSection/ProposalCardPanel/ProposalCardScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ActionCardSection" type="VBoxContainer" parent="MainHBox/GamePanel/GameVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="ActionCardLabel" type="Label" parent="MainHBox/GamePanel/GameVBox/ActionCardSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 1, 1)
theme_override_font_sizes/font_size = 14
text = "üÉè Âä®‰ΩúÂç°Â∫ì (ÂèåÂáªÊøÄÊ¥ªÊïàÊûú)"

[node name="ActionCardPanel" type="PanelContainer" parent="MainHBox/GamePanel/GameVBox/ActionCardSection"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActionCardBG" type="ColorRect" parent="MainHBox/GamePanel/GameVBox/ActionCardSection/ActionCardPanel"]
layout_mode = 2
color = Color(0.08, 0.06, 0.1, 0.8)

[node name="ActionCardScroll" type="ScrollContainer" parent="MainHBox/GamePanel/GameVBox/ActionCardSection/ActionCardPanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 2

[node name="ActionCardContainer" type="HBoxContainer" parent="MainHBox/GamePanel/GameVBox/ActionCardSection/ActionCardPanel/ActionCardScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ScreenFlash" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 1, 0, 0.4)
