## NegotiationPipelineLab.gd
## è°ˆåˆ¤ç®¡çº¿å®žéªŒå®¤ - ç‰©ç†é©±åŠ¨å¡ç‰Œç³»ç»Ÿæµ‹è¯•å°
##
## æ ¸å¿ƒå¾ªçŽ¯ï¼š
## 1. å¼€å‘è€…ä»Žå¡ç‰Œåº“ä¸­é€‰æ‹©ä¸€å¼ å¡ç‰Œï¼ˆåŒå‡»ï¼‰
## 2. ç³»ç»Ÿè¯»å– ActionCardData å¹¶åº”ç”¨å³æ—¶åŠ›/çŠ¶æ€æ‰­æ›²
## 3. VectorFieldPlot å’Œç¤ºæ³¢å™¨å®žæ—¶åé¦ˆ
##
## è®¾è®¡ç›®æ ‡ï¼šéªŒè¯ PR å‘é‡æ¨¡åž‹ + NegotiAct å¡ç‰Œçš„"ä¹è¶£"

class_name NegotiationPipelineLab
extends Control


## ===== è„šæœ¬å¼•ç”¨ =====

const NegotiationAgentScript: GDScript = preload("res://scenes/negotiation_ai/NegotiationAgent.gd")
const CardLibraryScript: GDScript = preload("res://scenes/negotiation/scripts/NegotiationCardLibrary.gd")
const DraggableCardScene: PackedScene = preload("res://scenes/negotiation/scenes/DraggableCard.tscn")


## ===== èŠ‚ç‚¹å¼•ç”¨ =====

# å·¦é¢æ¿ï¼šåŠ¨åŠ›å®¤æŽ§ä»¶
@onready var time_scale_slider: HSlider = $MainVBox/DebugDashboard/LeftPanel/TimeScaleGroup/TimeScaleSlider
@onready var time_scale_label: Label = $MainVBox/DebugDashboard/LeftPanel/TimeScaleGroup/TimeScaleValueLabel
@onready var greed_slider: HSlider = $MainVBox/DebugDashboard/LeftPanel/GreedGroup/GreedSlider
@onready var greed_label: Label = $MainVBox/DebugDashboard/LeftPanel/GreedGroup/GreedValueLabel
@onready var target_p_slider: HSlider = $MainVBox/DebugDashboard/LeftPanel/TargetPGroup/TargetPSlider
@onready var target_p_label: Label = $MainVBox/DebugDashboard/LeftPanel/TargetPGroup/TargetPValueLabel
@onready var target_r_slider: HSlider = $MainVBox/DebugDashboard/LeftPanel/TargetRGroup/TargetRSlider
@onready var target_r_label: Label = $MainVBox/DebugDashboard/LeftPanel/TargetRGroup/TargetRValueLabel
@onready var threshold_slider: HSlider = $MainVBox/DebugDashboard/LeftPanel/ThresholdGroup/ThresholdSlider
@onready var threshold_label: Label = $MainVBox/DebugDashboard/LeftPanel/ThresholdGroup/ThresholdValueLabel
@onready var active_strength_slider: HSlider = $MainVBox/DebugDashboard/LeftPanel/ActiveStrengthGroup/ActiveStrengthSlider
@onready var active_strength_label: Label = $MainVBox/DebugDashboard/LeftPanel/ActiveStrengthGroup/ActiveStrengthValueLabel

# ä¸­é¢æ¿ï¼šå‘é‡é›·è¾¾
@onready var vector_plot: Control = $MainVBox/DebugDashboard/CenterPanel/VectorFieldPlot
@onready var status_label: RichTextLabel = $MainVBox/DebugDashboard/CenterPanel/StatusLabel
@onready var submit_button: Button = $MainVBox/DebugDashboard/CenterPanel/ButtonContainer/SubmitButton
@onready var reset_button: Button = $MainVBox/DebugDashboard/CenterPanel/ButtonContainer/ResetButton

# å³é¢æ¿ï¼šçŠ¶æ€ç¤ºæ³¢å™¨
@onready var pressure_bar: ProgressBar = $MainVBox/DebugDashboard/RightPanel/PressureGroup/PressureBar
@onready var pressure_value_label: Label = $MainVBox/DebugDashboard/RightPanel/PressureGroup/PressureValueLabel
@onready var satisfaction_bar: ProgressBar = $MainVBox/DebugDashboard/RightPanel/SatisfactionGroup/SatisfactionBar
@onready var satisfaction_value_label: Label = $MainVBox/DebugDashboard/RightPanel/SatisfactionGroup/SatisfactionValueLabel
@onready var history_log: RichTextLabel = $MainVBox/DebugDashboard/RightPanel/HistoryLog

# ä¸‹é¢æ¿ï¼šå¡ç‰Œæ‰‹ç‰ŒåŒº
@onready var card_container: HBoxContainer = $MainVBox/CardDeckPanel/CardScroll/CardContainer

# å±å¹•é—ªçƒ
@onready var screen_flash: ColorRect = $ScreenFlash


## ===== å†…éƒ¨çŠ¶æ€ =====

var agent: RefCounted = null
var time_scale: float = 0.04
var current_round: int = 0
var active_strength: float = 30.0

## åœºæ‰­æ›²çŠ¶æ€è¿½è¸ªï¼ˆç”¨äºŽé‡ç½®ï¼‰
var _force_multiplier_active: float = 1.0


## ===== ç”Ÿå‘½å‘¨æœŸ =====

func _ready() -> void:
	_init_agent()
	_connect_signals()
	_sync_ui_from_agent()
	_update_status_display()
	_spawn_all_debug_cards()
	
	vector_plot.set_engine(agent.engine)
	print("[PipelineLab] åˆå§‹åŒ–å®Œæˆï¼Œå·²åŠ è½½ %d å¼ è°ƒè¯•å¡ç‰Œ" % card_container.get_child_count())


func _process(delta: float) -> void:
	if time_scale <= 0.0:
		return
	
	# æ›´æ–° Agentï¼ˆåŽ‹åŠ› & æ€¥èºåº¦ï¼‰
	agent.update(delta * time_scale)
	
	# AI è‡ªåŠ¨æ¼‚ç§»é€»è¾‘ï¼ˆè€ƒè™‘ force_multiplierï¼‰
	if not vector_plot.is_dragging and active_strength > 0.0:
		_apply_ai_drift(delta * time_scale)
	
	_update_pressure_display()
	_update_satisfaction_display()
	
	# åˆ·æ–°å‘é‡å›¾
	vector_plot.refresh()


func _apply_ai_drift(delta: float) -> void:
	var offer: Dictionary = vector_plot.get_offer()
	var force: Vector2 = agent.engine.calculate_active_force(
		offer["profit"], offer["relationship"], agent.engine.current_pressure
	)
	if force.length() < 0.01:
		vector_plot.stop_drift()
		return
	# åº”ç”¨ force_multiplierï¼ˆæ¥è‡ªå¡ç‰Œæ•ˆæžœï¼‰
	vector_plot.apply_drift(force * active_strength * _force_multiplier_active * delta)


## ===== åˆå§‹åŒ– =====

func _init_agent() -> void:
	agent = NegotiationAgentScript.new()
	agent.configure_personality(Vector2(80.0, 100.0), 1.0, 40.0)
	print("[PipelineLab] Negotiation Agent åˆå§‹åŒ–å®Œæˆ")


func _connect_signals() -> void:
	# æ»‘å—ä¿¡å·
	time_scale_slider.value_changed.connect(func(v: float) -> void:
		time_scale = v
		time_scale_label.text = "æ—¶é—´æµé€Ÿ: %.2fx" % v
	)
	greed_slider.value_changed.connect(func(v: float) -> void:
		agent.engine.greed_factor = v
		greed_label.text = "è´ªå©ªå› å­: %.2f" % v
		vector_plot.refresh()
	)
	target_p_slider.value_changed.connect(func(v: float) -> void:
		agent.engine.target_point.y = v
		target_p_label.text = "ç›®æ ‡åˆ©æ¶¦: %.0f" % v
		vector_plot.refresh()
	)
	target_r_slider.value_changed.connect(func(v: float) -> void:
		agent.engine.target_point.x = v
		target_r_label.text = "ç›®æ ‡å…³ç³»: %.0f" % v
		vector_plot.refresh()
	)
	threshold_slider.value_changed.connect(func(v: float) -> void:
		agent.engine.acceptance_threshold = v
		threshold_label.text = "æˆäº¤é˜ˆå€¼: %.0f" % v
		vector_plot.refresh()
	)
	active_strength_slider.value_changed.connect(func(v: float) -> void:
		active_strength = v
		active_strength_label.text = "ä¸»åŠ¨æ€§: %.0f" % v
	)
	
	# å‘é‡å›¾ä¿¡å·
	vector_plot.offer_changed.connect(func(_p: float, _r: float) -> void:
		_update_status_display()
		_update_satisfaction_display()
	)
	
	# æŒ‰é’®ä¿¡å·
	submit_button.pressed.connect(_on_submit_pressed)
	reset_button.pressed.connect(_on_reset_pressed)
	
	# Agent ä¿¡å·
	agent.impatience_counter_offer.connect(_on_impatience_triggered)


func _sync_ui_from_agent() -> void:
	greed_slider.value = agent.engine.greed_factor
	target_p_slider.value = agent.engine.target_point.y
	target_r_slider.value = agent.engine.target_point.x
	threshold_slider.value = agent.engine.acceptance_threshold
	active_strength_slider.value = active_strength


## ===== å¡ç‰Œç³»ç»Ÿ =====

## ç”Ÿæˆæ‰€æœ‰è°ƒè¯•å¡ç‰Œåˆ°æ‰‹ç‰ŒåŒº
func _spawn_all_debug_cards() -> void:
	# æ¸…ç©ºçŽ°æœ‰å¡ç‰Œ
	for child in card_container.get_children():
		child.queue_free()
	
	# ä»Ž CardLibrary èŽ·å–æ‰€æœ‰å¡ç‰Œ
	var all_cards: Array = CardLibraryScript.get_all_cards()
	
	for card_data: Resource in all_cards:
		var card_ui: Control = DraggableCardScene.instantiate()
		card_container.add_child(card_ui)
		
		# è®¾ç½®ä¸ºåŠ¨ä½œå¡æ¨¡å¼
		card_ui.set_as_action(card_data)
		card_ui.custom_minimum_size = Vector2(120, 160)
		
		# è¿žæŽ¥åŒå‡»ä¿¡å·
		card_ui.card_double_clicked.connect(_on_card_double_clicked.bind(card_data))


## å¤„ç†å¡ç‰ŒåŒå‡»äº‹ä»¶
func _on_card_double_clicked(card_ui: Control, card_data: Resource) -> void:
	_apply_card_effect(card_data)
	# è§†è§‰åé¦ˆï¼šå¡ç‰Œé—ªçƒ
	_flash_card(card_ui)


## åº”ç”¨å¡ç‰Œæ•ˆæžœåˆ°ç‰©ç†å¼•æ“Žï¼ˆæ ¸å¿ƒå‡½æ•°ï¼‰
func _apply_card_effect(card: Resource) -> void:
	var offer: Dictionary = vector_plot.get_offer()
	var current_pos: Vector2 = Vector2(offer["relationship"], offer["profit"]) # (R, P)
	
	# è°ƒç”¨ CardLibrary çš„æ•ˆæžœåº”ç”¨å‡½æ•°
	var result: Dictionary = CardLibraryScript.apply_card_effect(card, agent.engine, current_pos)
	
	# 1. åº”ç”¨å³æ—¶ä½ç½®å˜åŒ–
	var new_offer: Vector2 = result["new_offer"]
	vector_plot.set_offer(new_offer.y, new_offer.x) # (P, R)
	
	# 2. åº”ç”¨åœºæ‰­æ›²æ•ˆæžœ
	
	# æˆ˜äº‰è¿·é›¾
	if result.get("fog_enabled", false):
		vector_plot.toggle_fog_of_war(true)
	
	# ç›®æ ‡æ­ç¤ºï¼ˆI02ï¼‰
	if result.get("target_revealed", false):
		vector_plot.set_target_revealed(true)
	
	# æŠ–åŠ¨æ•ˆæžœ
	if result.get("jitter_enabled", false):
		vector_plot.toggle_jitter(true, result.get("jitter_amplitude", 8.0))
	
	# ä¸»åŠ¨åŠ›å€çŽ‡
	if result.has("force_multiplier"):
		_force_multiplier_active = result["force_multiplier"]
	
	# 3. è®°å½•æ—¥å¿—
	_append_card_log(card, result)
	
	# 4. å±å¹•åé¦ˆ
	_play_card_flash(card)
	
	# 5. åˆ·æ–°æ‰€æœ‰æ˜¾ç¤º
	_update_status_display()
	_update_satisfaction_display()
	vector_plot.refresh()


## å¡ç‰Œæ¿€æ´»è§†è§‰åé¦ˆ
func _flash_card(card_ui: Control) -> void:
	var tween: Tween = create_tween()
	tween.tween_property(card_ui, "modulate", Color(2.0, 2.0, 2.0, 1.0), 0.1)
	tween.tween_property(card_ui, "modulate", Color.WHITE, 0.2)


## å¡ç‰Œæ•ˆæžœå±å¹•é—ªçƒ
func _play_card_flash(card: Resource) -> void:
	var flash_color: Color
	match card.stance:
		0: # NEUTRAL
			flash_color = Color(0.5, 0.5, 0.8, 0.3)
		1: # AGGRESSIVE
			flash_color = Color(0.9, 0.3, 0.2, 0.4)
		2: # COOPERATIVE
			flash_color = Color(0.2, 0.8, 0.4, 0.4)
		3: # DECEPTIVE
			flash_color = Color(0.6, 0.2, 0.8, 0.4)
		_:
			flash_color = Color(0.5, 0.5, 0.5, 0.3)
	
	screen_flash.color = flash_color
	screen_flash.visible = true
	var tween: Tween = create_tween()
	tween.tween_property(screen_flash, "color:a", 0.0, 0.4)
	tween.tween_callback(func() -> void: screen_flash.visible = false)


## ===== æ ¸å¿ƒäº¤äº’ =====

func _on_submit_pressed() -> void:
	current_round += 1
	var offer: Dictionary = vector_plot.get_offer()
	var proposal_vector: Vector2 = Vector2(offer["relationship"], offer["profit"])
	
	# è°ƒç”¨ Pipeline
	var result: Dictionary = agent.evaluate_vector(proposal_vector)
	
	_append_log(result)
	_play_screen_flash(result["accepted"])
	
	if result["accepted"]:
		agent.engine.reset_pressure()
		# é‡ç½®åœºæ‰­æ›²
		vector_plot.reset_field_distortions()
		_force_multiplier_active = 1.0
	else:
		var counter: Vector2 = agent.engine.generate_counter_offer(
			proposal_vector.y, proposal_vector.x, agent.engine.current_pressure, 0.4
		)
		vector_plot.set_offer(counter.y, counter.x)
	
	_update_status_display(result)


func _on_reset_pressed() -> void:
	current_round = 0
	agent.reset()
	vector_plot.set_offer(50.0, 50.0)
	vector_plot.reset_field_distortions()
	_force_multiplier_active = 1.0
	history_log.text = "[color=gray][i]ç³»ç»Ÿå·²é‡ç½®...[/i][/color]\n"
	_update_pressure_display()


func _on_impatience_triggered(force_dir: Vector2) -> void:
	screen_flash.color = Color(1, 0, 0, 0.2)
	screen_flash.visible = true
	var tween: Tween = create_tween()
	tween.tween_property(screen_flash, "color:a", 0.0, 0.5)
	tween.tween_callback(func() -> void: screen_flash.visible = false)
	
	var offer: Dictionary = vector_plot.get_offer()
	var current: Vector2 = Vector2(offer["relationship"], offer["profit"])
	var nudged: Vector2 = current + force_dir * 10.0
	vector_plot.set_offer(nudged.y, nudged.x)
	_append_impatience_log()


## ===== æ˜¾ç¤ºæ›´æ–° =====

func _update_status_display(last_result: Variant = null) -> void:
	var offer: Dictionary = vector_plot.get_offer()
	var p: float = offer["profit"]
	var r: float = offer["relationship"]
	
	var correction: Vector2 = agent.engine.calculate_correction_vector(p, r, agent.engine.current_pressure)
	var effective_threshold: float = agent.engine.get_effective_threshold(agent.engine.current_pressure)
	
	var text: String = "[center][b]â•â•â• ç‰©ç†é©±åŠ¨å¡ç‰Œç³»ç»Ÿ â•â•â•[/b][/center]\n\n"
	text += "[b]å½“å‰ææ¡ˆ[/b]: P=%.0f R=%.0f\n" % [p, r]
	
	# åœºæ‰­æ›²çŠ¶æ€
	var distortions: Array[String] = []
	if vector_plot.is_fog_of_war_enabled():
		distortions.append("[color=purple]ðŸŒ«ï¸è¿·é›¾[/color]")
	if vector_plot.is_jitter_enabled():
		distortions.append("[color=magenta]âš¡æŠ–åŠ¨[/color]")
	if _force_multiplier_active != 1.0:
		distortions.append("[color=orange]ðŸ’¨æ¼‚ç§»Ã—%.1f[/color]" % _force_multiplier_active)
	
	if distortions.size() > 0:
		text += "[b]åœºæ‰­æ›²[/b]: %s\n" % " ".join(distortions)
	
	if last_result:
		var color: String = "lime" if last_result["accepted"] else "salmon"
		text += "\n[b]Decision[/b]: [color=%s]%s[/color]\n" % [color, last_result["intent"]]
		text += "[b]Tactic[/b]: %s\n" % last_result["tactic"]
	else:
		text += "\n[color=gray]åŒå‡»å¡ç‰Œæ¿€æ´»æ•ˆæžœ...[/color]\n"
	
	text += "\n[b]Physics[/b]:\n"
	text += "Force: %.1f / %.1f\n" % [correction.length(), effective_threshold]
	text += "Pressure: %.0f%%\n" % (agent.engine.get_pressure_normalized() * 100)
	
	status_label.text = text


func _update_pressure_display() -> void:
	var norm: float = agent.engine.get_pressure_normalized()
	pressure_bar.value = norm * 100.0
	pressure_value_label.text = "%.0f / %.0f" % [agent.engine.current_pressure, agent.engine.max_pressure]
	
	var style: StyleBox = pressure_bar.get_theme_stylebox("fill")
	if not style or not style is StyleBoxFlat:
		style = StyleBoxFlat.new()
		pressure_bar.add_theme_stylebox_override("fill", style)
	
	if norm > 0.8:
		(style as StyleBoxFlat).bg_color = Color(0.9, 0.2, 0.2)
	elif norm > 0.5:
		(style as StyleBoxFlat).bg_color = Color(0.9, 0.7, 0.2)
	else:
		(style as StyleBoxFlat).bg_color = Color(0.2, 0.7, 0.9)


func _update_satisfaction_display() -> void:
	var offer: Dictionary = vector_plot.get_offer()
	var s: float = agent.engine.calculate_satisfaction(offer["profit"], offer["relationship"])
	satisfaction_bar.value = s * 100.0
	satisfaction_value_label.text = "%.0f%%" % (s * 100.0)


func _append_log(result: Dictionary) -> void:
	var accepted: bool = result["accepted"]
	var icon: String = "âœ…" if accepted else "âŒ"
	var color: String = "lime" if accepted else "salmon"
	
	var entry: String = """[color=gray]â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”â”[/color]
[b][Round #%d][/b] %s
[color=%s]%s[/color]
[i]"%s"[/i]
""" % [current_round, icon, color, result["intent"], result["response_text"]]
	
	history_log.text = entry + history_log.text


func _append_card_log(card: Resource, result: Dictionary) -> void:
	var log_msg: String = result.get("log_message", "")
	if log_msg.is_empty():
		log_msg = "[%s] %s" % [card.negotiact_code, card.action_name]
	
	var stance_color: String = "white"
	match card.stance:
		1: stance_color = "salmon" # AGGRESSIVE
		2: stance_color = "lime" # COOPERATIVE
		3: stance_color = "orchid" # DECEPTIVE
	
	var entry: String = "[color=%s]ðŸƒ %s[/color]\n" % [stance_color, log_msg]
	history_log.text = entry + history_log.text


func _append_impatience_log() -> void:
	history_log.text = "[color=orange]âš ï¸ AI å¤±åŽ»è€å¿ƒï¼Œå¼ºåˆ¶åææ¡ˆï¼[/color]\n" + history_log.text


func _play_screen_flash(accepted: bool) -> void:
	var c: Color = Color(0.0, 0.8, 0.3, 0.4) if accepted else Color(0.9, 0.2, 0.2, 0.4)
	screen_flash.color = c
	screen_flash.visible = true
	var t: Tween = create_tween()
	t.tween_property(screen_flash, "color:a", 0.0, 0.3)
	t.tween_callback(func() -> void: screen_flash.visible = false)
